# bees

./: Cargo.toml  README.md
bees/: Cargo.toml  script.sh
bees-core/: Cargo.toml
bees-core/src/: capability.rs  lib.rs
bees-core/src/context/: context.rs  mod.rs  pre_context.rs
bees-core/src/endpoint/: endpoint.rs  mod.rs
bees-core/src/endpoint_def/: endpoint.rs  mod.rs
bees-core/src/net/: client.rs  mod.rs  request.rs
bees-core/src/record/: mod.rs  record.rs
bees-core/src/record_def/: mod.rs  record.rs
bees-core/src/request_decorator/: mod.rs  multiple_decorators.rs  request_decorator.rs  retries.rs
bees-core/src/resource/: mod.rs  resource.rs
bees-core/src/resource/resource_utils/: static_res.rs  updating_token.rs
bees-core/src/resource_def/: mod.rs  resource.rs
bees-core/src/resource_def/resource_utils/: mod.rs  static_res.rs  updating_token.rs
bees-core/src/utils/: error.rs  format_string.rs  mod.rs
bees-core/tests/: intergration.rs
bees-macros/: Cargo.toml
bees-macros/src/: chain.rs  derive_process.rs  endpoint.rs  handler.rs  handler_stacks.rs  lib.rs  process.rs  record.rs
bees-testing/: Cargo.toml  expanded.rs
bees-testing/src/: expanded.rs  main.rs
bees-testing/tests/: record_ok.rs
bees/src/: capability.rs  endpoint.rs  handler.rs  handlers.rs  lib.rs  record.rs
bees/src/core/: context.rs  mod.rs  resource.rs
bees/src/core/resources_utils/: mod.rs  static_res.rs  updating_cookie.rs  updating_token.rs
bees/src/endpoint_record/: endpoint.rs  mod.rs  record.rs  request_decorator.rs
bees/src/net/: bodies.rs  client.rs  mod.rs  net_error.rs  rate_limiter.rs  request.rs
bees/src/provided/: handlers.rs  mod.rs  no_record.rs  processors.rs
bees/src/provided/capabilities/: add_headers.rs  mod.rs
bees/src/provided/resources/: constant_res.rs  mod.rs  updating_token.rs
bees/src/resources/: dyn_resource.rs  mod.rs  resource.rs  resource_handler.rs
bees/src/utils/: error.rs  format_string.rs  mod.rs  resource_string.rs
bees/tests/: intergration.rs
