[package]
name = "bees"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = [] } 
url = "2.5.8"

# tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3.31"

delegate = "0.13.4"
serde = { version = "1.0.228", optional = true }
http = "1.1" # follow reqwest's
async-rate-limiter = "1.1.0"

dashmap = "6.1.0"
async-trait = { version = "0.1.89", optional = true }

# bitflags = "2.10.0"

serde_json = { version = "1.0.145", optional = true }

# thiserror = "2.0.17"
derive_more = { version = "2.1.1", features = ["full"] }

bees-macros = { path = "../bees-macros" }
 
[features]
reqwest-json = ["reqwest/json", "dep:serde", "dep:serde_json"]
reqwest-multipart = ["reqwest/multipart"]
reqwest-query = ["reqwest/query", "dep:serde"]
reqwest-form = ["reqwest/form", "dep:serde"]
async-trait = ["dep:async-trait"]
# derive = ["bees-macros"]

[profile.release]
opt-level = 3

[profile.dev]
debug = 2